--- a/assets/locales/vi.json
+++ b/assets/locales/vi.json
@@ -1,12 +1,26 @@
 {
-    "ok": "OK",
-    "cancel": "Cancel",
+    "ok": "Được",
+    "cancel": "Hủy",
+    "close": "Đóng",
     "app_name": "Kết nối tiếng Anh",
     "welcome_message": "Chào mừng bạn đến với Kết nối tiếng Anh!",
     "welcome_subtitle": "Học tiếng Anh qua trò chơi và hoạt động thú vị.",
     "home_tab": "Trang chủ",
     "game_tab": "Trò chơi",
     "settings_tab": "Cài đặt",
+    "topics": "Chủ đề",
+    "profile": "Hồ sơ",
     "level": "Màn",
-    "progress": "Tiến độ"
+    "progress": "Tiến độ",
+    "play": "Chơi",
+    "next_level": "Màn tiếp theo",
+    "play_again": "Chơi lại",
+    "try_again": "Thử lại",
+    "excellent": "Xuất sắc !",
+    "the_exact_word": "Từ chính xác là",
+    "complete": "hoàn thành",
+    "your_choice": "Lựa chọn của bạn",
+    "connect_the_word": "Hãy nối từ",
+    "suggest": "Gợi ý",
+    "pronounce": "Phát âm"
 }
